# markdown-note-taking-app

./: .gitignore  README.md
backend/: main.py  pyproject.toml
backend/app/: config.py  database.py  models.py  schemas.py  users.py  utils.py
backend/app/core/: cache.py  config.py  database.py  models.py  schemas.py
backend/app/routes/: clear_cache.py  delete_note.py  save_file.py  update_note.py  upload_file.py  view_all_notes.py  view_notes_file.py  view_uploaded_file.py
backend/app/utils/: data_to_dict.py  generate_file_id.py  notes_folder_utils.py  read_notes.py  save_file_to_notes.py
frontend/: index.html  package-lock.json  package.json  tsconfig.app.json
frontend/src/: index.css
frontend/src/app/: App.tsx  Router.tsx
frontend/src/app/routes/: LandingPage.tsx  NotFound.tsx  Notes.tsx  UploadPage.tsx
frontend/src/components/: DropdownInfo.tsx  Loading.tsx  Nav.tsx  NavigateButtons.tsx
frontend/src/css/: dropdown.css  note-card.css
frontend/src/features/landing_page/components/: Card.tsx  Card2.tsx  Features.tsx  GetStarted.tsx  GetStartedBtn.tsx  Hero.tsx  LandingFooter.tsx  LandingNav.tsx  Solution.tsx  featureData.ts  solutionData.ts
frontend/src/features/notes-page/components/: NoSearchesFound.tsx  NoteCard.tsx  deleteModal.tsx
frontend/src/hooks/: note-page-hooks.ts
frontend/src/services/: backend-api.ts
frontend/src/types/: note-page-types.ts
frontend/src/utils/: formatDateTime.ts
