[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.136.1",
    "psycopg2>=2.9.12",
    "pydantic>=2.13.4",
    "redis>=7.4.0",
    "sqlalchemy>=2.0.49",
]
